Added Endpoints for token validation